# PalletCameraScanner

./: .gitignore  ARRIVAL_CHECKLIST.md  ASSUMPTIONS.md  BENCH_PROTOCOL.md  HANDOFF_BRINGUP_2026-06-19.md  HANDOFF_WINDOWS.md  OPTICS_SPEC.md  PLAN_PHASE2.md  PLAN_PHASE3.md  PLAN_PHASE4.md  PLAN_PHASE5.md  PLAN_PHASE6.md  Prompt.md  README.md  REVIEW_7e4c22c.md  REVIEW_SYSTEM_0c30c77.md  REVIEW_bringup_4d95b67.md  REVIEW_macos_arrival.md  RUNBOOK.md  pyproject.toml
.github/workflows/: ci.yml
config/: bench_ab.yaml  bench_wave.yaml  default.yaml  demo.yaml  live_color.yaml  live_mono.yaml  station.yaml
deploy/: install_service.ps1  start_palletscan.ps1  stop_palletscan.ps1  uninstall_service.ps1
palletscan/: __init__.py  __main__.py  _compat.py  app.py  calibrate.py  cli.py  config.py  logging_setup.py  metrics.py  selftest.py  station.py  types.py
palletscan/events/: __init__.py  bus.py  dedup.py  evidence.py  http_sink.py  sinks.py
palletscan/pipeline/: __init__.py  decode_engine.py  decoders.py  motion_gate.py  pass_tracker.py  preprocess.py  rolling_buffer.py  segment_recorder.py
palletscan/reliability/: __init__.py  flaky.py  instance_lock.py  queues.py  supervisor.py  watchdog.py
palletscan/reporting/: __init__.py  ab.py  manifest.py  render.py
palletscan/sources/: __init__.py  base.py  camera.py  controls.py  devices.py  dshow_controls.py  factory.py  inject.py  probe.py  pygrabber_capture.py  record.py  render.py  synthetic.py  video.py
palletscan/web/: __init__.py  app.py  preview.py  server.py  store.py
palletscan/web/static/: app.js  index.html  style.css
tests/: camera_fakes.py  conftest.py  pygrabber_fakes.py  test_acceptance_synthetic.py  test_bench_sim.py  test_bench_tool.py  test_calibrate.py  test_camera.py  test_camera_config.py  test_camera_source.py  test_cli_run.py  test_config.py  test_controls.py  test_decode_engine.py  test_decoders.py  test_dedup.py  test_demo_and_cpu_tools.py  test_deploy_scripts.py  test_devices.py  test_dshow_controls.py  test_evidence.py  test_flaky_and_soak.py  test_http_sink.py  test_inject_grid.py  test_inject_source.py  test_inject_tools.py  test_instance_lock.py  test_logging_rotation.py  test_metrics.py  test_motion_gate.py  test_motion_integration.py  test_motion_tracking.py  test_pass_tracker.py  test_pipeline_smoke.py  test_probe.py  test_pygrabber_capture.py  test_pygrabber_capture_lifecycle.py  test_pygrabber_capture_marshal.py  test_recording_tap.py  test_render.py  (+21 more)
tests/js/: app_js_tests.mjs  harness.mjs
tools/: bench.py  bench_decoders.py  bench_sim.py  brightness_check.py  demo.py  dual_camera_check.py  echo_server.py  expo_probe.py  inject_dashboard.py  inject_grid.py  inject_pipeline_check.py  inject_run.py  inject_smoke.py  live_decode.py  make_selftest_assets.py  measure_cpu.py  mono_camerasource_check.py  mono_reconnect_check.py  record_synthetic.py  replay_bursts.py  soak.py
